🐛 Fix password visibility toggle

--- a/src/app/components/CredentialCard/CredentialCard.module.css
+++ b/src/app/components/CredentialCard/CredentialCard.module.css
@@ -42,6 +42,10 @@
   border: none;
 }
 
-.hidden {
+.password__text {
   -webkit-text-security: none;
+}
+
+.hidden {
+  -webkit-text-security: disc;
 }
